--- a/ViewSupport/ViewSupport.csproj
+++ b/ViewSupport/ViewSupport.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.2\lib\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -57,6 +60,7 @@
     <Compile Include="GCodeInfo.cs" />
     <Compile Include="ShapeList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SvgSerializer.cs" />
     <Compile Include="ThemeInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +72,9 @@
       <Project>{CDE77802-BC53-474C-9EF8-72E856110897}</Project>
       <Name>ScratchUtility</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
