--- a/ScratchTest/app.config
+++ b/ScratchTest/app.config
@@ -6,10 +6,11 @@
   <system.diagnostics>
     <trace autoflush="true" indentsize="4">
       <listeners>
+        <!--<add name="defaultListener"
+             type="System.Diagnostics.DefaultTraceListener" />-->
         <add name="textListener"
           type="System.Diagnostics.TextWriterTraceListener"
           initializeData="ScratchTest.log" />
-        <remove name="Default" />
       </listeners>
     </trace>
   </system.diagnostics>
