--- a/ViewSupport/ViewSupport.csproj
+++ b/ViewSupport/ViewSupport.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SvgSerializer.cs" />
     <Compile Include="ThemeInfo.cs" />
+    <Compile Include="VectorShape.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Primitives\Primitives.csproj">
