--- a/ScratchUtility/ScratchUtility.csproj
+++ b/ScratchUtility/ScratchUtility.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Matrix.cs" />
     <Compile Include="PointD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rect3.cs" />
     <Compile Include="Row.cs" />
     <Compile Include="Transformer.cs" />
     <Compile Include="ViewContext.cs" />
