- Cleanup, stability, perf.  Mainly prep work for sharing...

--- a/ScratchTest/app.config
+++ b/ScratchTest/app.config
@@ -4,10 +4,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
   </startup>
   <system.diagnostics>
+    <assert assertuienabled="true" />
     <trace autoflush="true" indentsize="4">
       <listeners>
-        <!--<add name="defaultListener"
-             type="System.Diagnostics.DefaultTraceListener" />-->
+        <add name="defaultListener"
+             type="System.Diagnostics.DefaultTraceListener" />
         <add name="textListener"
           type="System.Diagnostics.TextWriterTraceListener"
           initializeData="ScratchTest.log" />
